--- a/phenology-frontend/src/app/page/forgot-password/forgot-password.component.html
+++ b/phenology-frontend/src/app/page/forgot-password/forgot-password.component.html
@@ -1,11 +1,11 @@
-<h1>Új jelszó kérése</h1>
+<h1 class="m-5 text-center">Új jelszó kérése</h1>
 
-<div *ngIf="forgotPasswordStatus === ''" class="m-3">
-  <h4>
+<div *ngIf="forgotPasswordStatus === ''" class="m-5">
+  <h3 class="text-center">
     Kérjük adja meg az email címét, amellyel korábban regisztrált oldalunkon!
     <br />
     Erre elküldünk egy linket, mellyel új jelszót állíthat be.
-  </h4>
+  </h3>
   <div class="row d-flex justify-content-center align-items-center">
     <div class="login col-10 col-lg-6 my-5 p-5">
       <form (ngSubmit)="onSendRequest()">
