--- a/phenology-frontend/src/app/page/guide/individual-plant-guide/individual-plant-guide.component.scss
+++ b/phenology-frontend/src/app/page/guide/individual-plant-guide/individual-plant-guide.component.scss
@@ -1,8 +1,8 @@
 .image-1 {
-  float: left;
+  //float: left;
 }
 
-.image-2, .image-3{
+.image {
   display: block;
   margin-left: auto;
   margin-right: auto;
