--- a/phenology-frontend/src/app/page/observation-datas/observation-datas.component.html
+++ b/phenology-frontend/src/app/page/observation-datas/observation-datas.component.html
@@ -232,9 +232,9 @@
   </div>
 </div>
 
-<div *ngIf="!signedin">
-  <h5>
+<div *ngIf="!signedin" class="m-5">
+  <h3 class="text-center height">
     Új megfigyelés rögzítéséhez be kell
-    <a routerLink="../login" class="btn btn-link">jelentkeznie</a>. Köszönjük.
-  </h5>
+    <a routerLink="../login" class="">jelentkeznie</a>. Köszönjük.
+  </h3>
 </div>
