--- a/phenology-frontend/src/app/app.component.html
+++ b/phenology-frontend/src/app/app.component.html
@@ -1,12 +1,15 @@
+<div class="height_100">
+  <app-navigation></app-navigation>
 
-<app-navigation></app-navigation>
-
-<div class="container-fluid p-0">
-  <div class="row">
-    <div class="col-12">
-      <router-outlet></router-outlet>
+  <div class="container-fluid p-0">
+    <div class="row">
+      <div class="col-12">
+        <router-outlet></router-outlet>
+      </div>
     </div>
   </div>
-</div>
 
-<app-footer></app-footer>
+  <div class="footer-position">
+    <app-footer></app-footer>
+  </div>
+</div>
