--- a/phenology-frontend/src/app/page/guide/guide.component.html
+++ b/phenology-frontend/src/app/page/guide/guide.component.html
@@ -10,81 +10,243 @@
     </div>
   </div>
 
-  <div class="card m-5 shadow card-background" style="max-width: 100vw">
-    <div class="row my-5">
+  <div>
+    <div class="card title-background mt-5" style="max-width: 70vw">
+      <h3 class="card-title fw-bold m-3">
+        A fenológiai megfigyelések jelentősége
+      </h3>
+    </div>
 
-      <div>
-        <div class="card-body align-middle">
-          <h3 class="card-title fw-bold text-center">
-            A fenológiai megfigyelések jelentősége
-          </h3>
-          <p class="card-text">
-            <br />
-            A növényfenológia a növények környezeti viszonyoktól függő,
-            szabályszerű egymásutánban bekövetkező jelenségeinek (rügyfakadás,
-            virágzás, stb.) vizsgálatával foglalkozó tudomány. A vadnövények és
-            a táplálékunkként szolgáló kultúrnövényeink fejlődési fázisait az
-            időjárás döntő mértékben befolyásolja. Mivel az időjárás évről-évre
-            másként alakul, a növények is évről-évre más időpontban érik el az
-            egyes fejlettségi állapotaikat.
+    <div class="card mx-5 mt-n5 card-background">
+      <div class="align-middle mb-5">
+        <p class="card-text mx-5 mt-5">
+          <br />
+          A növényfenológia a növények környezeti viszonyoktól függő,
+          szabályszerű egymásutánban bekövetkező jelenségeinek (rügyfakadás,
+          virágzás, stb.) vizsgálatával foglalkozó tudomány. A vadnövények és a
+          táplálékunkként szolgáló kultúrnövényeink fejlődési fázisait az
+          időjárás döntő mértékben befolyásolja. Mivel az időjárás évről-évre
+          másként alakul, a növények is évről-évre más időpontban érik el az
+          egyes fejlettségi állapotaikat.
 
-            <br />
-            Ezen időpontok ismerete nélkülözhetetlen pl. a gazdálkodók számára.
-            A hosszú, évtizedekre szóló vadnövény fenológiai adatsorok pedig az
-            éghajlat és az éghajlat-változás szempontjából rendkívül fontosak,
-            hiszen a növények fejlődési stádiumai az éghajat változásával
-            eltolódnak, azt nyomjelzőként mutatják.
-          </p>
-        </div>
+          <br />
+          Ezen időpontok ismerete nélkülözhetetlen pl. a gazdálkodók számára. A
+          hosszú, évtizedekre szóló vadnövény fenológiai adatsorok pedig az
+          éghajlat és az éghajlat-változás szempontjából rendkívül fontosak,
+          hiszen a növények fejlődési stádiumai az éghajat változásával
+          eltolódnak, azt nyomjelzőként mutatják.
+        </p>
       </div>
     </div>
   </div>
 
-  <div class="card m-5 shadow card-background" style="max-width: 100vw">
-    <div class="row my-5">
-      <div>
-        <div class="card-body align-middle">
-          <h3 class="card-title fw-bold text-center">
-            A fenológiai megfigyelések fókusza
-          </h3>
-          <p class="card-text">
-            <br />
-            A fenológiai megfigyelések fókusza annak az időpontnak a pontos
-            meghatározása, amikor egy növény új fenológiai fázisba lép.
-            <br />
-            <br />
-            Egyes növényeknél például az első virágok megjelenése és az egész
-            növény virágba borulása között akár hosszabb idő is eltelhet,
-            különösen a tél végén, tavasz elején, ezért tanulmányozzuk a lentebb
-            fölsorolt fenológiai fázisokhoz tartozó küszöbértékeket.
-          </p>
-        </div>
-      </div>
+  <div>
+    <div class="card title-background mt-5" style="max-width: 70vw">
+      <h3 class="card-title fw-bold m-3">A fenológiai megfigyelések fókusza</h3>
+    </div>
 
+    <div class="card mx-5 mt-n5 card-background">
+      <div class="align-middle mb-5">
+        <p class="card-text mx-5 mt-5">
+          <br />
+          A fenológiai megfigyelések fókusza annak az időpontnak a pontos
+          meghatározása, amikor egy növény új fenológiai fázisba lép.
+          <br />
+          <br />
+          Egyes növényeknél például az első virágok megjelenése és az egész
+          növény virágba borulása között akár hosszabb idő is eltelhet,
+          különösen a tél végén, tavasz elején, ezért tanulmányozzuk a lentebb
+          fölsorolt fenológiai fázisokhoz tartozó küszöbértékeket.
+        </p>
+      </div>
     </div>
   </div>
 
-  <div class="card m-5 shadow card-background" style="max-width: 100vw">
-    <div class="row my-5">
+  <div>
+    <div class="card title-background mt-5" style="max-width: 70vw">
+      <h3 class="card-title fw-bold m-3">Mennyi növényt kell megfigyelnem?</h3>
+    </div>
 
-      <div>
-        <div class="card-body align-middle">
-          <h3 class="card-title fw-bold text-center">
-            Mennyi növényt kell, megfigyeljek?
-          </h3>
-          <p class="card-text">
-            <br />
-            Az útmutatóban szereplő növények listája azokat a fajtákat
-            tartalmazza, melyeket érdemesnek tartunk a megfigyelésre. Ha valaki
-            ezek közül mindet, az összes fázissal meg tudja figyelni, az
-            szenzációs. Ha valaki csak egy növényfaj egy fejlődési fázisának
-            kezdetét tudja megfigyelni, az is nagyon jó. Rajtunk múlik:
-            amennyire lehetőségünk van, amennyit időnk, energiánk enged. Ha
-            valaki a felsoroltakon kívül más növényt figyel meg, azt is örömmel
-            fogadjuk, és lehet a listában nem szereplő, de megfigyelésre
-            érdemesnek tartott növényeket is javasolni.
+    <div class="card mx-5 mt-n5 card-background">
+      <div class="align-middle mb-5">
+        <p class="card-text mx-5 mt-5">
+          <br />
+          Az útmutatóban szereplő növények listája azokat a fajtákat
+          tartalmazza, melyeket érdemesnek tartunk a megfigyelésre. Ha valaki
+          ezek közül mindet, az összes fázissal meg tudja figyelni, az
+          szenzációs. Ha valaki csak egy növényfaj egy fejlődési fázisának
+          kezdetét tudja megfigyelni, az is nagyon jó. Rajtunk múlik: amennyire
+          lehetőségünk van, amennyit időnk, energiánk enged. Ha valaki a
+          felsoroltakon kívül más növényt figyel meg, azt is örömmel fogadjuk,
+          és lehet a listában nem szereplő, de megfigyelésre érdemesnek tartott
+          növényeket is javasolni.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div>
+    <div class="card title-background mt-5" style="max-width: 70vw">
+      <h3 class="card-title fw-bold m-3">
+        A megfigyelések elvégzésének folyamata
+      </h3>
+    </div>
+
+    <div class="card mx-5 mt-n5 card-background">
+      <div class="align-middle mb-5">
+        <p class="card-text mx-5 mt-5">
+          A megfigyelendő információk köre a lehető legjobban le van
+          egyszerűsítve. Arra azonban figyeljünk, hogy csak olyan információkat
+          adjunk meg, melyeket a saját szemünkkel figyeltünk meg, mások szóbeli
+          tájékoztatása alapján ne készítsünk megfigyelést.
+          <br />
+        </p>
+        <ol class="card-text mx-5">
+          <li>
+            A növény <b>fajtájának</b> pontos azonosítása
+            <p>
+              Nagyon fontos, hogy a növényeket pontoson beazonosítsuk, ebben
+              segít az útmutató második felében azok fényképekkel illusztrált
+              részletes leírása.
+            </p>
+          </li>
+          <li>
+            Az <b>új fenológiai fázis</b> azonosítása
+            <p>
+              Az új fenológiai fázisba lépést akkor tudjuk pontosan azonosítani,
+              ha a kiválasztott növényt napról-napra szemmel tartjuk.
+            </p>
+          </li>
+          <li>
+            A <b>környezet</b>, elsősorban a domborzat (sík terület, völgy,
+            délies, északias lejtő) meghatározása
+            <p>
+              A lejtő irányultságának nagy szerepe van a fenológiai fázisok
+              időpontjában, már kis körzeten belül is egy délies (így melegebb,
+              napfényes) oldalban pl. jóval hamarabb kezdenek virágozni a
+              növények, mint az északias oldalon.
+            </p>
+          </li>
+          <li>A <b>helyszín</b> és <b>dátum</b> meghatározása</li>
+        </ol>
+      </div>
+    </div>
+  </div>
+
+  <div class="mb-5">
+    <div class="card title-background mt-5" style="max-width: 70vw">
+      <h3 class="card-title fw-bold m-3">A megfigyelések rögzítése</h3>
+    </div>
+
+    <div class="card mx-5 mt-n5 card-background">
+      <div class="align-middle mb-5">
+        <p class="card-text mx-5 mt-5">
+          <br />
+          A megfigyeléseket kérjük az OMSZ növényfenológiai megfigyelései
+          portálján, azaz ezen az oldalon rögzíteni. A rögzítéshez egy egyszeri
+          regisztrációt követően kapunk jogosultságot. Az alabbi adatokat adjuk
+          meg:
+        </p>
+        <ol class="card-text mx-5">
+          <li>
+            A megfigyelt növény <b>helyszíne</b> (település, településrész, pl:
+            Miskolc-Diósgyőr), a domborzat-lejtő iránya (sík a terület, völgyben
+            fekszik, vagy milyen irányultságú lejtőn található a növény)
+          </li>
+          <li>
+            A megfigyelt növény <b>fajtája</b> (az útmutatóban szereplő magyar
+            név elegendő)
+          </li>
+          <li>A megfigyelt növény új <b>fenológiai fázisa</b></li>
+          <li>
+            A megfigyelt növény új fázisba lépésének <b>időpontja</b> (év, hó,
+            nap)
+          </li>
+        </ol>
+        <p class="mx-5">
+          A rögzítés időpontja lehet akár napokkal a megfigyelés időpontja után
+          is, de azért arra vigyázzunk, hogy addig rögzítsük, míg a dátumra
+          pontosan emlékszünk, vagy a megfigyeléskor jegyezzük föl a megfelelő
+          adatokat.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div>
+    <div class="card title-background mt-5" style="max-width: 70vw">
+      <h3 class="card-title fw-bold m-3">Fenológiai fázisok</h3>
+    </div>
+
+    <div class="card mx-5 mt-n5 card-background">
+      <div class="align-middle mb-5">
+
+        <h5 class="mt-5 mx-5"><b>Fák és cserjék</b></h5>
+        <p class="card-text mx-5">
+          Az alábbi lista egy általános leírás, egyes növényfajták fenológiai
+          fázisai nem az alább leírt sorrendben következnek be. Például a som
+          virágzása megelőzi a lombosodást.
+          <br />
+        </p>
+        <ol class="card-text mx-5">
+          <li>
+            <b>Rügyfakadás</b>
+            <p>
+              A rügyek felduzzadása szemmel láthatóan megindult, a rügypikkelyek
+              között megjelent a lomb- ill. a sziromlevelek hegye.
+            </p>
+          </li>
+          <li>
+            <b>Lombosodás kezdete</b>
+            <p>
+              A rügyekből megjelentek az első zöld levelek, a fa távolról már
+              nem látszik csupasznak. A som estében először a virágok nyílnak,
+              csak ez után kezdődik a lombosodás.
+            </p>
+          </li>
+          <li>
+            <b>Virágzás kezdete</b>
+            <p>
+              Az első teljes mértékben kinyílt virágok megjelenése, de a virágok
+              zöme még bimbóban van.
+            </p>
+          </li>
+          <li>
+            <b>Teljes virágzás</b>
+          </li>
+          <p>
+            A normálisan fejlett bimbók zömmel kinyíltak, a sziromlevelek
+            szétterültek, a porzó és a bibe jól látható.
           </p>
-        </div>
+          <li>
+            <b>Érett termés</b>
+            <p>
+              A gyümölcsöknél a termés a fajtára jellemző színt és nagyságot
+              legalább 50 %-ban elérte. Vadgesztenyénél, diónál a termésburok
+              fölrepedését kell megfigyelni.
+            </p>
+          </li>
+          <li>
+            <b>Őszi lombszíneződés kezdete</b>
+            <p>A levelek legalább 50%-a elszíneződött a fán.</p>
+          </li>
+          <li>
+            <b>Őszi lombhullás kezdete</b>
+            <p>
+              A levelek zöme felvette a fajtára jellemző jellegzetes őszi színt,
+              és legalább 10 % le is hullott.
+            </p>
+          </li>
+        </ol>
+        <br />
+
+        <h5 class="mx-5"><b>Lágyszárúak</b></h5>
+        <ol class="card-text mx-5">
+          <li>
+            <b>Virágzás kezdete</b>
+            <p>Az első teljes mértékben kinyílt virágok megjelenése.</p>
+          </li>
+        </ol>
       </div>
     </div>
   </div>
@@ -167,18 +329,19 @@
           </p>
           <ol class="card-text">
             <li>
-              A megfigyelt növény <b>helyszíne</b> (település, településrész, pl:
-              Miskolc-Diósgyőr), a domborzat-lejtő iránya (sík a terület,
+              A megfigyelt növény <b>helyszíne</b> (település, településrész,
+              pl: Miskolc-Diósgyőr), a domborzat-lejtő iránya (sík a terület,
               völgyben fekszik, vagy milyen irányultságú lejtőn található a
               növény)
             </li>
             <li>
-              A megfigyelt növény <b>fajtája</b> (az útmutatóban szereplő magyar név
-              elegendő)
+              A megfigyelt növény <b>fajtája</b> (az útmutatóban szereplő magyar
+              név elegendő)
             </li>
             <li>A megfigyelt növény új <b>fenológiai fázisa</b></li>
             <li>
-              A megfigyelt növény új fázisba lépésének <b>időpontja</b> (év, hó, nap)
+              A megfigyelt növény új fázisba lépésének <b>időpontja</b> (év, hó,
+              nap)
             </li>
           </ol>
           <p>
@@ -246,7 +409,7 @@
               </p>
             </li>
             <li>
-            <b>Őszi lombszíneződés kezdete</b>
+              <b>Őszi lombszíneződés kezdete</b>
               <p>A levelek legalább 50%-a elszíneződött a fán.</p>
             </li>
             <li>
@@ -262,18 +425,16 @@
           <h5><b>Lágyszárúak</b></h5>
           <ol class="card-text">
             <li>
-            <b>Virágzás kezdete</b>
+              <b>Virágzás kezdete</b>
               <p>Az első teljes mértékben kinyílt virágok megjelenése.</p>
             </li>
           </ol>
         </div>
       </div>
-
     </div>
   </div>
 
   <!--
   <a [routerLink]="'/plant'" class="card-link">Növények részletes bemutatása</a>
   -->
-
 </div>
