--- a/phenology-frontend/src/app/page/guide/individual-plant-guide/individual-plant-guide.component.html
+++ b/phenology-frontend/src/app/page/guide/individual-plant-guide/individual-plant-guide.component.html
@@ -1,16 +1,21 @@
 <div *ngIf="plant$ | async as plant" class="mx-auto m-5">
   <div>
-    <h3 class="text-center fw-bold mt-5">{{ plant.name }}</h3>
+    <div class="my-5">
+      <h3 class="text-center fw-bold mt-5">{{ plant.name }}</h3>
 
-    <h6 class="text-center fw-bold mb-5">{{ plant.latin }}</h6>
+      <h6 class="text-center fw-bold mb-5">{{ plant.latin }}</h6>
 
-    <p class="m-5">
-      <img [src]="plant.image[1]" alt="" class="me-5 image-1" />
-      {{ plant.description }}
-    </p>
+      <p class="m-5">
+        {{ plant.description }}
+      </p>
+    </div>
 
-    <img [src]="plant.image[2]" alt="" class="image-2" />
+    <div class="my-3">
+      <img [src]="plant.image[1]" alt="" class="image" />
 
-    <img [src]="plant.image[3]" alt="" class="image-3" />
+      <img [src]="plant.image[2]" alt="" class="image" />
+
+      <img [src]="plant.image[3]" alt="" class="image" />
+    </div>
   </div>
 </div>
