--- a/phenology-frontend/src/app/page/login/login.component.html
+++ b/phenology-frontend/src/app/page/login/login.component.html
@@ -1,12 +1,14 @@
-<h1>Bejelentkezés</h1>
-<br>
-<h3>
-  Új megfigyelés rögzítéséhez kérjük jelentkezzen be.
-  <br>
-  <br>
-  Amennyiben még nem regisztrált portálunkon, egy név, email cím és
-  jelszó megadásával csatlakozhat a megfigyelők csapatához.
-</h3>
+<div class="m-5">
+  <h1 class="text-center">Bejelentkezés</h1>
+  <br />
+  <h3 class="text-center my-3">
+    Új megfigyelés rögzítéséhez kérjük jelentkezzen be.
+    <br />
+    <br />
+    Amennyiben még nem regisztrált portálunkon, egy név, email cím és jelszó
+    megadásával csatlakozhat a megfigyelők csapatához.
+  </h3>
+</div>
 
 <div class="row d-flex justify-content-center align-items-center">
   <div class="login col-10 col-lg-6 my-5 p-5">
@@ -14,17 +16,29 @@
     <form (ngSubmit)="onLogin()">
       <div class="form-group">
         <label>Email</label>
-        <input class="form-control" name="email" [(ngModel)]="user.email" type="email">
+        <input
+          class="form-control"
+          name="email"
+          [(ngModel)]="user.email"
+          type="email"
+        />
       </div>
       <div class="form-group mt-2">
         <label>Password</label>
-        <input class="form-control" name="password" [(ngModel)]="user.password" type="password">
+        <input
+          class="form-control"
+          name="password"
+          [(ngModel)]="user.password"
+          type="password"
+        />
       </div>
       <button type="submit" class="btn btn-primary col-12 my-3">
         Bejelentkezés
       </button>
       <a routerLink="../register" class="btn btn-link">Regisztráció</a>
-      <a routerLink="../forgotPassword" class="btn btn-link">Elfelejtett jelszó</a>
+      <a routerLink="../forgotPassword" class="btn btn-link"
+        >Elfelejtett jelszó</a
+      >
     </form>
   </div>
 </div>
