--- a/phenology-frontend/src/app/page/home/home.component.html
+++ b/phenology-frontend/src/app/page/home/home.component.html
@@ -5,77 +5,77 @@
   </div>
 </div>
 
-<div class="row row-cols-1 row-cols-md-3 g-4 mx-5 mt-5">
-  <div class="col ps-4">
-    <div class="card h-100" class="shadow bg-body rounded">
-      <img
-        src="../../../assets/image/gyongyvirag.jpg"
-        class="card-img-top"
-        alt="..."
-      />
-      <div class="card-body">
-        <h5>Mi a jelentősége?</h5>
-        <h3 class="card-title">Növényfenológiai megfigyelések</h3>
-        <p class="card-text">
-          A növények fejlődése összegzi a környezeti hatásokat, az időjárási
-          elemek összhatását mutatja. Így a növény kiváló meteorológiai eszköz
-          az éghajlat, az éghajlat változásának jellemzésére. A fenológiai
-          jelenségek a növény fejlődésének látható jelei, a fenológiai fázisok
-          az egyes élettani szakaszok határpontjai, melyek szabályszerű rendben
-          követik egymást, ezért hű képet adnak a fejlődés üteméről. A fenológia
-          eredeti feladata a fejlődési fázisok naptári időpontok szerinti
-          feljegyzése volt.
-        </p>
-        <div class="card-footer">
-          <a [routerLink]="'/history'" class="card-link">Bővebben</a>
+<div class="container">
+  <div class="row">
+    <div class="row-cols-md-12 row-cols-lg-4 row-cols-xl-4 d-flex justify-content-center">
+      <div class="card h-100 p-2 shadow bg-body rounded">
+        <img
+          src="../../../assets/image/gyongyvirag.jpg"
+          class="card-img-top"
+          alt="..."
+        />
+        <div class="card-body d-flex flex-column">
+          <h5>Mi a jelentősége?</h5>
+          <h3 class="card-title">Növényfenológiai megfigyelések</h3>
+          <p class="card-text">
+            A növények fejlődése összegzi a környezeti hatásokat, az időjárási
+            elemek összhatását mutatja. Így a növény kiváló meteorológiai eszköz
+            az éghajlat, az éghajlat változásának jellemzésére. A fenológiai
+            jelenségek a növény fejlődésének látható jelei, a fenológiai fázisok
+            az egyes élettani szakaszok határpontjai, melyek szabályszerű
+            rendben követik egymást, ezért hű képet adnak a fejlődés üteméről. A
+            fenológia eredeti feladata a fejlődési fázisok naptári időpontok
+            szerinti feljegyzése volt.
+          </p>
+          <div class="card-footer mt-auto">
+            <a [routerLink]="'/history'" class="card-link">Bővebben</a>
+          </div>
         </div>
       </div>
-    </div>
-  </div>
-  <div class="col px-4">
-    <div class="card h-100" class="shadow bg-body rounded">
-      <img
-        src="../../../assets/image/megfigyelok.jpg"
-        class="card-img-top"
-        alt="..."
-      />
-      <div class="card-body">
-        <h5>Én is részt vehetek?</h5>
-        <h3 class="card-title">Legyél te is megfigyelő!</h3>
-        <p class="card-text">
-          Önkénteseket keresünk növényfenológiai megfigyelésekhez: A feladat
-          nagyon egyszerű, figyelni kell, hogy egy-egy növény pl. mikor kezd
-          virágozni, mikor lombosodik, mikor kezd ősszel hullani a levele, és
-          azt itt egy rövid regisztráció után rögzíteni. Nem kell mindenféle
-          növényt folyamatosan figyelni, ha valaki csak egy növényfaj egy
-          fejlődési fázisának kezdetét tudja megfigyelni, az is nagyon jó. Ha ma
-          nem figyeljük és mérjük meg a környezetünk állapotát és azt nem
-          dokumentáljuk, akkor azt a jövőben már soha senki nem fogja tudni
-          megmérni, megfigyelni.
-        </p>
-        <div class="card-footer">
-          <a [routerLink]="'/challenge'" class="card-link">Bővebben</a>
+
+      <div class="card h-100 mx-5 p-2 shadow bg-body rounded">
+        <img
+          src="../../../assets/image/megfigyelok.jpg"
+          class="card-img-top"
+          alt="..."
+        />
+        <div class="card-body d-flex flex-column">
+          <h5>Én is részt vehetek?</h5>
+          <h3 class="card-title">Legyél te is megfigyelő!</h3>
+          <p class="card-text">
+            Önkénteseket keresünk növényfenológiai megfigyelésekhez: A feladat
+            nagyon egyszerű, figyelni kell, hogy egy-egy növény pl. mikor kezd
+            virágozni, mikor lombosodik, mikor kezd ősszel hullani a levele, és
+            azt itt egy rövid regisztráció után rögzíteni. Nem kell mindenféle
+            növényt folyamatosan figyelni, ha valaki csak egy növényfaj egy
+            fejlődési fázisának kezdetét tudja megfigyelni, az is nagyon jó. Ha
+            ma nem figyeljük és mérjük meg a környezetünk állapotát és azt nem
+            dokumentáljuk, akkor azt a jövőben már soha senki nem fogja tudni
+            megmérni, megfigyelni.
+          </p>
+          <div class="card-footer mt-auto">
+            <a [routerLink]="'/challenge'" class="card-link">Bővebben</a>
+          </div>
         </div>
       </div>
-    </div>
-  </div>
-  <div class="col pe-4">
-    <div class="card h-100" class="shadow bg-body rounded">
-      <img
-        src="../../../assets/image/termes.jpg"
-        class="card-img-top"
-        alt="..."
-      />
-      <div class="card-body" *ngIf="article$ | async as article">
-        <h5>Mi a legfrissebb?</h5>
-        <h3 class="card-title">{{ article[0].title }}</h3>
-        <p class="card-text">
-          {{ article[0].abstract }}
-        </p>
-        <div class="card-footer">
-          <a routerLink="/details/{{ article[0]._id }}" class="card-link"
-            >Bővebben</a
-          >
+
+      <div class="card h-100 p-2 shadow bg-body rounded">
+        <img
+          src="../../../assets/image/termes.jpg"
+          class="card-img-top"
+          alt="..."
+        />
+        <div class="card-body d-flex flex-column" *ngIf="article$ | async as article">
+          <h5>Mi a legfrissebb?</h5>
+          <h3 class="card-title">{{ article[0].title }}</h3>
+          <p class="card-text">
+            {{ article[0].abstract }}
+          </p>
+          <div class="card-footer mt-auto">
+            <a routerLink="/details/{{ article[0]._id }}" class="card-link"
+              >Bővebben</a
+            >
+          </div>
         </div>
       </div>
     </div>
