--- a/phenology-frontend/src/app/app.component.html
+++ b/phenology-frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="height_100">
+<div class="height_100 d-flex flex-column">
   <app-navigation></app-navigation>
 
   <div class="container-fluid p-0">
@@ -9,7 +9,7 @@
     </div>
   </div>
 
-  <div class="footer-position">
+  <div class="mt-auto">
     <app-footer></app-footer>
   </div>
 </div>
