--- a/phenology-frontend/src/app/page/home/home.component.html
+++ b/phenology-frontend/src/app/page/home/home.component.html
@@ -8,7 +8,7 @@
 <div class="container">
   <div class="row">
     <div class="row-cols-md-12 row-cols-lg-4 row-cols-xl-4 d-flex justify-content-center">
-      <div class="card h-100 p-2 shadow bg-body rounded">
+      <div class="card h-100 shadow bg-body rounded">
         <img
           src="../../../assets/image/gyongyvirag.jpg"
           class="card-img-top"
@@ -33,7 +33,7 @@
         </div>
       </div>
 
-      <div class="card h-100 mx-5 p-2 shadow bg-body rounded">
+      <div class="card h-100 mx-5 shadow bg-body rounded">
         <img
           src="../../../assets/image/megfigyelok.jpg"
           class="card-img-top"
@@ -59,7 +59,7 @@
         </div>
       </div>
 
-      <div class="card h-100 p-2 shadow bg-body rounded">
+      <div class="card h-100 shadow bg-body rounded">
         <img
           src="../../../assets/image/termes.jpg"
           class="card-img-top"
