--- a/phenology-frontend/src/app/page/article/article.component.html
+++ b/phenology-frontend/src/app/page/article/article.component.html
@@ -11,7 +11,7 @@
       </p>
       <p>
         <img
-        [src]="article.images[0]"
+        [src]="article.image[0].imgPath"
         alt="cikk"
         style="float: left; max-width: 300px"
         class="me-3"
