--- a/phenology-frontend/src/app/page/home/home.component.html
+++ b/phenology-frontend/src/app/page/home/home.component.html
@@ -84,19 +84,38 @@
 
 <div class="container border-top mt-5">
   <div class="d-flex justify-content-center m-4">
-    <a href="" class="">
+    <a href="https://www.met.hu/"  target="_blank" class="">
       <img
         src="../../../assets/image/logo_x135_teljes_szurke_kerekitett.png"
         class=""
-        alt="..."
+        alt="Országos Meteorológiai Szolgálat"
         width="200px"
       />
     </a>
   </div>
 
   <div class="row justify-content-center">
+    {{ sliderLinks }}
+    {{ sliderLinks[0] | json }}
+    <div *ngFor="let sl of sliderLinks; let i=index"> <!-- class="card shadow rounded m-1 p-0 slider slider{{i+1}}" -->
+      {{sl}}
+      <!-- <a [href]= "slider.omszLink" target="_blank" class="text-decoration-no">
+        <img
+          [src]= "slider.iconPath"
+          class="card-img-top"
+          [alt]= "slider.iconAlt"
+        />
+        <p class="text-center align-middle mt-3">{{ slider.title }}</p>
+      </a> -->
+  </div>
+
+  </div>
+
+
+  <div class="row justify-content-center">
+
     <div class="card shadow rounded m-1 p-0 slider slider1">
-      <a href="" class="text-decoration-no">
+      <a href="" target="_blank" class="text-decoration-no">
         <img
           src="../../../assets/image/slider/idojaras.jpg"
           class="card-img-top"
@@ -107,7 +126,7 @@
     </div>
 
     <div class="card shadow rounded m-1 p-0 slider slider2">
-      <a href="" class="text-decoration-no">
+      <a href="" target="_blank" class="text-decoration-no">
         <img
           src="../../../assets/image/slider/agro.jpg"
           class="card-img-top"
@@ -118,7 +137,7 @@
     </div>
 
     <div class="card shadow rounded m-1 p-0 slider slider3">
-      <a href="" class="text-decoration-no">
+      <a href="" target="_blank" class="text-decoration-no">
         <img
           src="../../../assets/image/slider/eghajlat.jpg"
           class="card-img-top"
@@ -129,7 +148,7 @@
     </div>
 
     <div class="card shadow rounded m-1 p-0 slider slider4">
-      <a href="" class="text-decoration-no">
+      <a href="" target="_blank" class="text-decoration-no">
         <img
           src="../../../assets/image/slider/elorejelzes1.jpg"
           class="card-img-top"
@@ -140,7 +159,7 @@
     </div>
 
     <div class="card shadow rounded m-1 p-0 slider slider5">
-      <a href="" class="text-decoration-no">
+      <a href="" target="_blank" class="text-decoration-no">
         <img
           src="../../../assets/image/slider/humanmet.jpg"
           class="card-img-top"
@@ -151,7 +170,7 @@
     </div>
 
     <div class="card shadow rounded m-1 p-0 slider slider6">
-      <a href="" class="text-decoration-no">
+      <a href="" target="_blank" class="text-decoration-no">
         <img
           src="../../../assets/image/slider/levegokornyezet.jpg"
           class="card-img-top"
@@ -162,7 +181,7 @@
     </div>
 
     <div class="card shadow rounded m-1 p-0 slider slider7">
-      <a href="" class="text-decoration-no">
+      <a href="" target="_blank" class="text-decoration-no">
         <img
           src="../../../assets/image/slider/meteora.jpg"
           class="card-img-top"
@@ -173,7 +192,7 @@
     </div>
 
     <div class="card shadow rounded m-1 p-0 slider slider8">
-      <a href="" class="text-decoration-no">
+      <a href="" target="_blank" class="text-decoration-no">
         <img
           src="../../../assets/image/slider/radar1.jpg"
           class="card-img-top"
@@ -184,7 +203,7 @@
     </div>
 
     <div class="card shadow rounded m-1 p-0 slider slider9">
-      <a href="" class="text-decoration-no">
+      <a href="" target="_blank" class="text-decoration-no">
         <img
           src="../../../assets/image/slider/metesz.jpg"
           class="card-img-top"
@@ -195,7 +214,7 @@
     </div>
 
     <div class="card shadow rounded m-1 p-0 slider slider10">
-      <a href="" class="text-decoration-no">
+      <a href="" target="_blank" class="text-decoration-no">
         <img
           src="../../../assets/image/slider/repules.jpg"
           class="card-img-top"
@@ -206,7 +225,7 @@
     </div>
 
     <div class="card shadow rounded m-1 p-0 slider slider11">
-      <a href="" class="text-decoration-no">
+      <a href="" target="_blank" class="text-decoration-no">
         <img
           src="../../../assets/image/slider/tavaink.jpg"
           class="card-img-top"
@@ -217,7 +236,7 @@
     </div>
 
     <div class="card shadow rounded m-1 p-0 slider slider12">
-      <a href="" class="text-decoration-no">
+      <a href="" target="_blank" class="text-decoration-no">
         <img
           src="../../../assets/image/slider/veszelyjelzes.jpg"
           class="card-img-top"
