--- a/phenology-frontend/src/app/common/navigation/navigation.component.scss
+++ b/phenology-frontend/src/app/common/navigation/navigation.component.scss
@@ -1,8 +1,22 @@
-.navbar, .dropdown-menu {
+.navbar__top, .dropdown-menu {
   background-color: rgb(0, 61, 0);
+}
+
+.navbar__bottom {
+  background-color: rgb(0, 110, 0);
+}
+
+.OMSZ__logo{
+  position: absolute;
+  left: 44vw;
+  top: 5px;
 }
 
 .dropdown-menu > li > a:hover {
     background-image: none;
     background-color: lightgreen;
+}
+
+.active {
+  font-weight: bold;
 }
