--- a/phenology-frontend/src/app/page/challenge/challenge.component.html
+++ b/phenology-frontend/src/app/page/challenge/challenge.component.html
@@ -5,7 +5,7 @@
       <h2 class="p-3 text-light text-end fw-bold">Önkénteseket keresünk!</h2>
       <br />
       <br />
-      <h3 class="p-3 text-light text-end fw-bold">Csatlakozz hozzánk!</h3>
+      <h3 class="p-3 text-light text-end fw-bold">Csatlakozzon hozzánk!</h3>
     </div>
   </div>
 
@@ -25,7 +25,7 @@
       </div>
       <div class="col-md-8">
         <div class="card-body align-middle">
-          <h2 class="card-title fw-bold text-center">Mit kellene tenni?</h2>
+          <h2 class="card-title fw-bold text-center">Mit kell tenni?</h2>
           <p class="card-text">
             A feladat nagyon egyszerű, figyelni kell, hogy egy-egy növény pl.
             mikor kezd virágozni, mikor lombosodik, mikor kezd ősszel hullani a
@@ -77,7 +77,7 @@
             <p>
               A növényfenológiai megfigyelések történetéről
               <a [routerLink]="'/history'" class="card-link">itt </a>
-              olvashatsz bővebben.
+              olvashat bővebben.
             </p>
           </div>
         </div>
@@ -95,12 +95,12 @@
   <div class="fixed-bg-2 row justify-content-start">
     <div class="col-5 dark-background">
       <h3 class="p-1 py-5 text-light text-end fw-bold">
-        Megfigyeléseiddel bővítsd te is hazánk fenológiai adatsorát, nemzeti
+        Megfigyeléseivel bővítse hazánk fenológiai adatsorát, nemzeti
         vagyonunkat!
       </h3>
       <br />
       <h3 class="p-1 py-5 text-light text-end fw-bold">
-        Közreműködését mindenkinek előre is köszönjük!
+        Közreműködését előre is köszönjük!
       </h3>
     </div>
   </div>
