--- a/phenology-frontend/src/app/common/navigation/navigation.component.html
+++ b/phenology-frontend/src/app/common/navigation/navigation.component.html
@@ -1,12 +1,12 @@
 <nav class="navbar navbar-expand-lg navbar__top">
   <div class="container-fluid">
     <!-- Navbar Brand-->
-    <a class="navbar-brand ps-3 text-white" routerLink="/"
+    <a class="navbar-brand text-white" routerLink="/"
       ><img
         src="../../../assets/image/logo2.png"
         alt=""
         width="30px"
-        class="me-2"
+        class="mr-2"
       />
       <strong>Növényfenológia</strong>
     </a>
