--- a/phenology-frontend/src/app/common/footer/footer.component.html
+++ b/phenology-frontend/src/app/common/footer/footer.component.html
@@ -1,14 +1,14 @@
 <div class="m-5">
   <footer
-    class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top"
+    class="d-flex flex-wrap justify-content-lg-between justify-content-center align-items-center py-3 border-top"
   >
-    <div class="col-md-4 d-flex align-items-center">
-      <div class="tooltipp">
+    <div class="col-md-4 d-flex align-items-center justify-content-center">
+      <div class="tooltipp border-bottom pb-3 mb-3">
         <span class="text-muted">
           <a
             href="https://www.met.hu/methu/szerzoi_jogok/"
             target="_blank"
-            class="nav-link px-2 text-muted"
+            class="nav-link px-2 text-muted text-center"
             >© 2022 Országos Meteorológiai Szolgálat</a
           >
         </span>
@@ -16,7 +16,7 @@
       </div>
     </div>
 
-    <div>
+    <div class="d-flex justify-content-center">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
         <li class="nav-item">
           <a
@@ -37,7 +37,7 @@
       </ul>
     </div>
 
-    <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+    <ul class="nav col-md-4 d-flex justify-content-center justify-content-lg-end list-unstyled">
       <li class="ms-3 twitter">
         <div class="tooltipp">
           <a
