--- a/phenology-frontend/src/app/page/home/home.component.html
+++ b/phenology-frontend/src/app/page/home/home.component.html
@@ -6,17 +6,17 @@
 </div>
 
 <div class="container">
-  <div class="row">
-    <div
-      class="row-cols-md-12 row-cols-lg-4 row-cols-xl-4 d-flex justify-content-center"
-    >
-      <div class="card h-100 shadow bg-body rounded">
+  <div class="row d-flex justify-content-center">
+    <div class="card-deck" >
+      <!-- class="row-cols-md-12 row-cols-lg-4 row-cols-xl-4 d-flex justify-content-center" -->
+
+      <div class="card shadow bg-body rounded card-deck__card">
         <img
           src="../../../assets/image/gyongyvirag.jpg"
           class="card-img-top"
           alt="..."
         />
-        <div class="card-body d-flex flex-column">
+        <div class="card-body d-flex flex-column m-2">
           <h5>Mi a jelentősége?</h5>
           <h3 class="card-title">Növényfenológiai megfigyelések</h3>
           <p class="card-text">
@@ -34,7 +34,7 @@
         </div>
       </div>
 
-      <div class="card h-100 mx-5 shadow bg-body rounded">
+      <div class="card shadow bg-body rounded card-deck__card">
         <img
           src="../../../assets/image/megfigyelok.jpg"
           class="card-img-top"
@@ -58,7 +58,7 @@
         </div>
       </div>
 
-      <div class="card h-100 shadow bg-body rounded">
+      <div class="card shadow bg-body rounded card-deck__card">
         <img
           src="../../../assets/image/termes.jpg"
           class="card-img-top"
@@ -96,7 +96,7 @@
     </a>
   </div>
 
-  <div class="row justify-content-center">
+  <div class="row justify-content-center mx-2">
     <div
       *ngFor="let slider of sliderLinks; let i = index"
       class="card shadow rounded m-1 p-0 slider slider{{ i + 1 }}"
