--- a/phenology-frontend/src/app/page/article/article.component.html
+++ b/phenology-frontend/src/app/page/article/article.component.html
@@ -4,7 +4,7 @@
     *ngFor="let article of articles | paginate: { itemsPerPage: 3, currentPage: p }">
     <!--  | slice: pageSliceStart:pageSliceEnd" -->
 
-    <div class="d-inline-block my-3">
+    <div class="d-inline-block my-2 py-4 border-bottom">
       <h1 class="mb-1">{{ article.title }}</h1>
       <p>
         <i> {{ article.date | date : 'YYYY. MM. dd.' }} </i>
@@ -14,7 +14,7 @@
         [src]="article.image[0].imgPath"
         alt="cikk"
         style="float: left; max-width: 300px"
-        class="me-3"
+        class="mx-5"
         />
         {{ article.abstract }}
         <br>
@@ -38,140 +38,3 @@
       nextLabel="Következő"
     ></pagination-controls>
   </div>
-
-
-<!--
-<div class="row">
-  <div class="col-12">
-    <nav class="d-flex justify-content-center">
-      <ul class="pagination">
-        <li [class.disabled]="currentPage === 1" class="page-item">
-          <a (click)="onStepPage($event, -1)" class="page-link" href="#"
-            >Previous</a
-          >
-        </li>
-        <li
-          *ngFor="let btn of paginator"
-          class="page-item"
-          [class.active]="btn.page === currentPage"
-        >
-          <a (click)="onPaginate($event, btn)" class="page-link" href="#">
-            {{ btn.page }}
-          </a>
-        </li>
-        <li [class.disabled]="currentPage === lastPage" class="page-item">
-          <a (click)="onStepPage($event, 1)" class="page-link" href="#">Next</a>
-        </li>
-      </ul>
-    </nav>
-  </div>
-</div>
-
-<div class="m-5 d-flex">
-  <div class="d-block">
-    <p><i>2022. január 27. 9:00</i></p>
-    <h1>Nyugalmi állapotban a mogyoró</h1>
-    <p>
-      Bevezető Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-      Expedita accusamus sint laboriosam nam, eligendi hic recusandae, facere
-      dolorum a quas illum quidem ex quam neque ullam voluptatem necessitatibus
-      repellendus nemo!
-    </p>
-    <p>
-      <img
-        src="../../../assets/image/cikk.jpg"
-        alt="cikk minta"
-        style="float: left; max-width: 300px"
-        class="me-3"
-      />
-
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate,
-      laboriosam nostrum quam nemo iusto ut exercitationem amet commodi eos qui
-      placeat officia molestiae suscipit officiis ducimus sapiente, quas cum
-      ipsam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
-      iusto, libero labore id, veniam illo, laboriosam inventore odit sit odio
-      ea dignissimos voluptas maxime. Eaque cumque quos minus in doloremque.
-    </p>
-  </div>
-</div>
-
-<div class="m-5 d-flex">
-  <div class="d-block">
-    <p class="mb-1"><i>2022. január 2. 10:00</i></p>
-    <h1>Nyugalmi állapotban a mogyoró</h1>
-    <p class="m-3">
-      <img
-        src="../../../assets/image/cikk.jpg"
-        alt="cikk minta"
-        style="float: left; max-width: 100px"
-        class="me-3"
-      />
-
-      Bevezető szöveg lorem ipsum dolor sit amet consectetur adipisicing elit.
-      Illum iusto, libero labore id, veniam illo, laboriosam inventore odit sit
-      odio ea dignissimos voluptas maxime. Eaque cumque quos minus in
-      doloremque.
-    </p>
-    <a href="">Tovább</a>
-  </div>
-</div>
-
-<div class="m-5 d-flex">
-  <div class="d-block">
-    <p class="mb-1"><i>2022. január 2. 10:00</i></p>
-    <h1>Nyugalmi állapotban a mogyoró</h1>
-    <p class="m-3">
-      <img
-        src="../../../assets/image/cikk.jpg"
-        alt="cikk minta"
-        style="float: left; max-width: 100px"
-        class="me-3"
-      />
-
-      Bevezető szöveg lorem ipsum dolor sit amet consectetur adipisicing elit.
-      Illum iusto, libero labore id, veniam illo, laboriosam inventore odit sit
-      odio ea dignissimos voluptas maxime. Eaque cumque quos minus in
-      doloremque.
-    </p>
-    <a href="">Tovább</a>
-  </div>
-</div>
-
-<div class="m-5 d-flex">
-  <div class="d-block">
-    <p class="mb-1"><i>2022. január 2. 10:00</i></p>
-    <h1>Nyugalmi állapotban a mogyoró</h1>
-    <p class="m-3">
-      <img
-        src="../../../assets/image/cikk.jpg"
-        alt="cikk minta"
-        style="float: left; max-width: 100px"
-        class="me-3"
-      />
-
-      Bevezető szöveg lorem ipsum dolor sit amet consectetur adipisicing elit.
-      Illum iusto, libero labore id, veniam illo, laboriosam inventore odit sit
-      odio ea dignissimos voluptas maxime. Eaque cumque quos minus in
-      doloremque.
-    </p>
-    <a href="">Tovább</a>
-  </div>
-</div>
-
-<div d-block>
-  <nav aria-label="Page navigation example">
-    <ul class="pagination justify-content-center">
-      <li class="page-item disabled">
-        <a class="page-link">Előző</a>
-      </li>
-      <li class="page-item"><a class="page-link" href="#">1</a></li>
-      <li class="page-item"><a class="page-link" href="#">2</a></li>
-      <li class="page-item"><a class="page-link" href="#">3</a></li>
-      <li class="page-item">
-        <a class="page-link" href="#">Következő</a>
-      </li>
-    </ul>
-  </nav>
-</div>
-
--->
