--- a/phenology-frontend/src/app/page/home/home.component.html
+++ b/phenology-frontend/src/app/page/home/home.component.html
@@ -10,7 +10,7 @@
     <div class="card-deck" >
       <!-- class="row-cols-md-12 row-cols-lg-4 row-cols-xl-4 d-flex justify-content-center" -->
 
-      <div class="card shadow bg-body rounded card-deck__card">
+      <div class="card shadow bg-body rounded card-deck__card mx-4">
         <img
           src="../../../assets/image/gyongyvirag.jpg"
           class="card-img-top"
@@ -34,7 +34,7 @@
         </div>
       </div>
 
-      <div class="card shadow bg-body rounded card-deck__card">
+      <div class="card shadow bg-body rounded card-deck__card mx-4">
         <img
           src="../../../assets/image/megfigyelok.jpg"
           class="card-img-top"
@@ -58,7 +58,7 @@
         </div>
       </div>
 
-      <div class="card shadow bg-body rounded card-deck__card">
+      <div class="card shadow bg-body rounded card-deck__card mx-4">
         <img
           src="../../../assets/image/termes.jpg"
           class="card-img-top"
